; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_pci.c___mlxsw_pci_queue_doorbell_arm_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_pci.c___mlxsw_pci_queue_doorbell_arm_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_pci = type { i32 }
%struct.mlxsw_pci_queue = type { i64, i32 }

@mlxsw_pci_doorbell_arm_type_offset = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlxsw_pci*, %struct.mlxsw_pci_queue*, i32)* @__mlxsw_pci_queue_doorbell_arm_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__mlxsw_pci_queue_doorbell_arm_set(%struct.mlxsw_pci* %0, %struct.mlxsw_pci_queue* %1, i32 %2) #0 {
  %4 = alloca %struct.mlxsw_pci*, align 8
  %5 = alloca %struct.mlxsw_pci_queue*, align 8
  %6 = alloca i32, align 4
  store %struct.mlxsw_pci* %0, %struct.mlxsw_pci** %4, align 8
  store %struct.mlxsw_pci_queue* %1, %struct.mlxsw_pci_queue** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.mlxsw_pci*, %struct.mlxsw_pci** %4, align 8
  %8 = load %struct.mlxsw_pci*, %struct.mlxsw_pci** %4, align 8
  %9 = getelementptr inbounds %struct.mlxsw_pci, %struct.mlxsw_pci* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32*, i32** @mlxsw_pci_doorbell_arm_type_offset, align 8
  %12 = load %struct.mlxsw_pci_queue*, %struct.mlxsw_pci_queue** %5, align 8
  %13 = getelementptr inbounds %struct.mlxsw_pci_queue, %struct.mlxsw_pci_queue* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = getelementptr inbounds i32, i32* %11, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.mlxsw_pci_queue*, %struct.mlxsw_pci_queue** %5, align 8
  %18 = getelementptr inbounds %struct.mlxsw_pci_queue, %struct.mlxsw_pci_queue* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @DOORBELL(i32 %10, i32 %16, i32 %19)
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @mlxsw_pci_write32(%struct.mlxsw_pci* %7, i32 %20, i32 %21)
  ret void
}

declare dso_local i32 @mlxsw_pci_write32(%struct.mlxsw_pci*, i32, i32) #1

declare dso_local i32 @DOORBELL(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
